--- a/.github/workflows/engine_nightly_user.yml
+++ b/.github/workflows/engine_nightly_user.yml
@@ -15,7 +15,7 @@ on:
     - cron: "40 3,10 * * *"
 
 jobs:
-  Run_demos_and_WebUI:
+  Scheduled_demos_and_WebUI:
     name: OQ ${{ matrix.engine-branch }} Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -35,16 +35,6 @@ jobs:
           curl -L -O https://github.com/gem/oq-engine/raw/master/install.py
           python install.py user --version=${{ matrix.engine-branch }} --venv $HOME/gh-venv-${{ matrix.engine-branch }}
         if: github.event.inputs.git-ref == ''
-      - name: Install OQ (Custom Ref)
-        run: |
-          set -x
-          curl -L -O https://github.com/gem/oq-engine/raw/master/install.py
-          python install.py user --version=${{ github.event.inputs.git-ref }} --venv $HOME/gh-venv_custom-${{ github.event.inputs.git-ref }}
-        if: github.event.inputs.git-ref != ''
-      - name: Setup debugging session
-        uses: mxschmitt/action-tmate@v3
-        timeout-minutes: 30
-        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
       - name: (Scheduled) Test WebUI and run https calculation
         run: |
           source $HOME/gh-venv-${{ matrix.engine-branch }}/bin/activate
@@ -61,7 +51,7 @@ jobs:
           sleep 1
           # Perform migration after setup local_settings
           curl --fail -L -I -X GET http://127.0.0.1:8800
-          # Run all demos          
+          # Run all demos
           cd $HOME/gh-venv-${{ matrix.engine-branch }}/
           curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/${{ matrix.engine-branch }}/bin/run-demos.sh
           oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
@@ -71,9 +61,28 @@ jobs:
           oq engine --run https://downloads.openquake.org/jobs/risk_test.zip
           curl -v --fail -G http://127.0.0.1:8800/engine/1/outputs
         if: github.event.inputs.git-ref == ''
+  Manual_demos_and_WebUI:
+    name: OQ ${{ github.event.inputs.git-ref }} Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-24.04]
+        python-version: ["3.11", "3.12"]
+    steps:
+      - name: Install OQ (Custom Ref)
+        run: |
+          set -x
+          curl -L -O https://github.com/gem/oq-engine/raw/master/install.py
+          python install.py user --version=${{ github.event.inputs.git-ref }} --venv $HOME/gh-venv_custom-${{ github.event.inputs.git-ref }}
+        if: github.event.inputs.git-ref != ''
+      - name: Setup debugging session
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 30
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
       - name: (Manual) Test WebUI and run https calculation
         run: |
-          source $HOME/gh-venv_custom-${{ matrix.engine-branch }}/bin/activate
+          source $HOME/gh-venv_custom-${{ github.event.inputs.git-ref }}/bin/activate
           set -x
           oq engine --upgrade-db
           oq --version
@@ -87,8 +96,8 @@ jobs:
           sleep 1
           # Perform migration after setup local_settings
           curl --fail -L -I -X GET http://127.0.0.1:8800
-          # Run all demos          
-          cd $HOME/gh-venv_custom-${{ matrix.engine-branch }}/
+          # Run all demos
+          cd $HOME/gh-venv_custom-${{ github.event.inputs.git-ref }}/
           curl -L -O https://raw.githubusercontent.com/gem/oq-engine/refs/heads/${{ github.event.inputs.git-ref }}/bin/run-demos.sh
           oq_basedir=$(python -c "from openquake import baselib; print(baselib.__path__[0].rsplit('/', 2)[0])")
           qa_tests_data_dir=$oq_basedir/openquake/qa_tests_data
