undo unwantend change

--- a/.github/workflows/demos.yml
+++ b/.github/workflows/demos.yml
@@ -72,7 +72,7 @@ jobs:
           GITHUB_BS_REF:  ${{ github.base_ref }}
         run: |
           source ~/openquake/bin/activate
-          zip -q -r /tmp/demos.zip demos/ openquake/qa_tests_data/
+          zip -q -r /tmp/demos.zip demos/
           OQ_DISTRIBUTE=zmq bin/run-demos.sh demos/
           oq dump /tmp/oqdata.zip
           # OQ_DISTRIBUTE=slurm oq run demos/hazard/AreaSourceClassicalPSHA/job.ini
