--- a/.github/workflows/docker_dev.yml
+++ b/.github/workflows/docker_dev.yml
@@ -31,55 +31,7 @@ jobs:
         if: github.event.inputs.git-ref != ''
         with:
           ref: ${{ github.event.inputs.git-ref }}
-      - name: Build image engine with tag nightly during scheduled task
-        if: github.event.inputs.version == ''
-        env:
-          DOCKER_USERNAME: ${{ secrets.docker_username }}
-          DOCKER_PASSWORD: ${{ secrets.docker_password }}
-          DOCKER_TAG: ${{ github.event.inputs.version }}
-          REPO_REF: ${{ github.event.inputs.git-ref }}
-        id: docker_engine_scheduled
-        run: |
-          docker build --build-arg oq_branch=master -t openquake/engine:nightly -f docker/Dockerfile.dev docker
-          docker image ls
-          # Test authentication
-          echo "Test WEBUI HEADLESS"
-          cat > ./.env << EOF
-          OQ_APPLICATION_MODE=RESTRICTED
-          OQ_ADMIN_LOGIN=admin_scheduled
-          OQ_ADMIN_PASSWORD=crond_schedule
-          OQ_ADMIN_EMAIL=login@scheduler.io
-          EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
-          EMAIL_HOST=smtp.gmail.com
-          EMAIL_PORT=587
-          EMAIL_USE_TLS=True
-          EMAIL_HOST_USER=admin@reply.com
-          EMAIL_HOST_PASSWORD=polhjuih@
-          EMAIL_SUPPORT=noreply@reply.com
-          DJANGO_SETTINGS_MODULE=openquake.server.settings
-          EOF
-          echo "docker run --name openquake -d --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly "
-          docker run --name openquake -d --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:nightly
-          echo "Waiting WEBUI up on port 8800...."
-          while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/accounts/login/)" != "200" ]]; do
-           echo "Still waiting WEBUI account login up on port 8800...."
-           sleep 5 # wait for 5 seconds before check again
-          done
-          sleep 1
-          #
-          curl --fail -L -I -X GET http://127.0.0.1:8800/accounts/login
-          #Run calcs
-          echo "test run of calc on running container "
-          time docker exec -t openquake oq engine --run /usr/src/oq-engine/demos/risk/ScenarioDamage/job_hazard.ini /usr/src/oq-engine/demos/risk/ScenarioDamage/job_risk.ini
-          sleep 3
-          time docker exec -t openquake oq engine --run "https://github.com/gem/oq-engine/blob/master/openquake/server/tests/data/classical.zip?raw=true"
-          echo "test run of a calcs on new created container"
-          time docker run openquake/engine:$DOCKER_TAG oq engine --run "https://github.com/gem/oq-engine/blob/master/openquake/server/tests/data/classical.zip?raw=true"
-          echo " push image engine with tag nightly on docker hub "
-          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-          docker push openquake/engine:nightly
-      - name: Build image engine with tag ${{ github.event.inputs.version }} during manual run
-        if: github.event.inputs.version != ''
+      - name: Build image engine
         env:
           DOCKER_USERNAME: ${{ secrets.docker_username }}
           DOCKER_PASSWORD: ${{ secrets.docker_password }}
@@ -87,15 +39,22 @@ jobs:
           REPO_REF: ${{ github.event.inputs.git-ref }}
         id: docker_engine_manual
         run: |
+          if [ ${{ github.event.inputs.version }} != '' ]; then
+            echo "Is manual run"
+          else
+            echo "Is scheduled run"
+            DOCKER_TAG=nightly
+            REPO_REF=master
+          fi
           docker build --build-arg oq_branch=$REPO_REF -t openquake/engine:$DOCKER_TAG -f docker/Dockerfile.dev docker
           docker image ls
           # Test authentication on WebUI headless
           echo "Test WEBUI HEADLESS"
           cat > ./.env << EOF
           OQ_APPLICATION_MODE=RESTRICTED
-          OQ_ADMIN_LOGIN=manual_run_admin
-          OQ_ADMIN_PASSWORD=manual_admin
-          OQ_ADMIN_EMAIL=login@manual.io
+          OQ_ADMIN_LOGIN=user
+          OQ_ADMIN_PASSWORD=login
+          OQ_ADMIN_EMAIL=user@login.input
           EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
           EMAIL_HOST=smtp.gmail.com
           EMAIL_PORT=587
