--- a/.github/workflows/demos.yml
+++ b/.github/workflows/demos.yml
@@ -73,7 +73,7 @@ jobs:
         run: |
           source ~/openquake/bin/activate
           zip -q -r /tmp/demos.zip demos/
-          OQ_DISTRIBUTE=zmq bin/run-demos.sh demos/
+          OQ_DISTRIBUTE=zmq bin/run-demos.sh demos/ openquake/qa_tests_data/
           oq dump /tmp/oqdata.zip
           # OQ_DISTRIBUTE=slurm oq run demos/hazard/AreaSourceClassicalPSHA/job.ini
           oq restore /tmp/oqdata.zip /tmp/oqdata
