--- a/.github/workflows/docker_dev.yml
+++ b/.github/workflows/docker_dev.yml
@@ -47,7 +47,11 @@ jobs:
             REPO_REF=master
           fi
           docker build --build-arg oq_branch=$REPO_REF -t openquake/engine:$DOCKER_TAG -f docker/Dockerfile.dev docker
+      - name: List Image
+        run: |
           docker image ls
+      - name: Test Auth mode and run calcs on single docker
+        run: |
           # Test authentication on WebUI headless
           echo "Test WEBUI HEADLESS"
           cat > ./.env << EOF
@@ -72,7 +76,6 @@ jobs:
            sleep 5 # wait for 5 seconds before check again
           done
           sleep 1
-
           echo -n "TEST DJANGO LOGIN "
           LOGIN_URL=http://127.0.0.1:8800/accounts/login/
           YOUR_USER='user'
@@ -97,3 +100,19 @@ jobs:
           echo " push image engine with tag :$DOCKER_TAG on docker hub "
           docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
           docker push openquake/engine:$DOCKER_TAG
+      - name: push Openquake engine image on dockerhub
+        env:
+          DOCKER_USERNAME: ${{ secrets.docker_username }}
+          DOCKER_PASSWORD: ${{ secrets.docker_password }}
+          DOCKER_TAG: ${{ github.event.inputs.version }}
+          REPO_REF: ${{ github.event.inputs.git-ref }}
+        run: |
+          if [ ${{ github.event.inputs.version }} != '' ]; then
+            echo "Is manual run"
+          else
+            echo "Is scheduled run"
+            DOCKER_TAG=nightly
+            REPO_REF=master
+          fi
+          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+          docker push openquake/engine --all-tags
