Update demos to be run on docker

--- a/.github/workflows/docker_stable.yml
+++ b/.github/workflows/docker_stable.yml
@@ -59,7 +59,6 @@ jobs:
           EMAIL_SUPPORT=noreply@reply.com
           DJANGO_SETTINGS_MODULE=openquake.server.settings
           EOF
-          for tag in $(echo ${{ github.event.inputs.tags }} | tr , '\n'); do echo "-t openquake/engine:$tag " | tr -d '\n'; done
           release_tag=$(echo ${{ github.event.inputs.tags }} | cut -f 1 -d ,)
           echo "docker run --name openquake -d --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:${release_tag} "
           docker run --name openquake -d --env-file=./.env -p 127.0.0.1:8800:8800 openquake/engine:${release_tag}
@@ -85,11 +84,10 @@ jobs:
           docker logs -t -n 5 openquake
           # Run calcs
           echo "test run of calc on running container "
-          time docker exec -t openquake oq engine --run /usr/src/oq-engine/demos/risk/ScenarioDamage/job_hazard.ini /usr/src/oq-engine/demos/risk/ScenarioDamage/job_risk.ini
           sleep 3
           time docker exec -t openquake oq engine --run "https://github.com/gem/oq-engine/blob/master/openquake/server/tests/data/classical.zip?raw=true"
           echo "test run of a calcs on new created container"
-          time docker run openquake/engine:${release_tag} oq engine --run "https://github.com/gem/oq-engine/blob/master/openquake/server/tests/data/classical.zip?raw=true"
+          time docker run openquake/engine:${release_tag} oq engine --run "https://downloads.openquake.org/jobs/risk_test.zip"
       - name: push image engine with tags ${{ github.event.inputs.tags }} on dockerhub
         run: |
           docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
