--- a/demos/hazard/AreaSourceClassicalPSHA/job.toml
+++ b/demos/hazard/AreaSourceClassicalPSHA/job.toml
@@ -3,4 +3,4 @@
 ini = "job.ini"
 [success]
 func = "openquake.engine.postjobs.import_outputs"
-out_types = ["hcurves", "hmaps", "uhs"]
+out_types = ["hcurves", "hmaps-stats"]
