Extended success to multiple functions

--- a/demos/hazard/AreaSourceClassicalPSHA/job.toml
+++ b/demos/hazard/AreaSourceClassicalPSHA/job.toml
@@ -1,6 +1,6 @@
 [workflow]
 [Job]
 ini = "job.ini"
-[success]
+[[success]]
 func = "openquake.engine.postjobs.import_outputs"
 out_types = ["hcurves", "hmaps-stats"]
