Fix webui_rh_test action

--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -97,39 +97,31 @@ jobs:
          set -x
          source /opt/openquake/venv/bin/activate
          pip freeze
-         mkdir /var/log/oq-engine/
+         mkdir -p /var/log/oq-engine/
          chown -R openquake /var/log/oq-engine/
-         runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --upgrade-db &'
-         # Wait the DbServer to come up
-         #echo "Waiting DBServer up on port 1907...."
-         #while ! nc -z localhost 1907; do
-         #  sleep 2 # wait for 1/10 of the second before check again
-         #done
-         #sleep 3
+         runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --upgrade-db'
          oq --version
          #
          echo "Add settings for login and logging on webui before to start"
          cd /__w/oq-engine/oq-engine/
          cd openquake/server
          cat > local_settings.py << EOF
-         OQ_APPLICATION_MODE = RESTRICTED
+         OQ_APPLICATION_MODE = "RESTRICTED"
          #
          WEBUI_ACCESS_LOG_DIR = '/var/log/oq-engine'
          EOF
          echo "DISPLAY content of local_settings"
          cat local_settings.py
+         # Perform migration after setup local_settings
+         cd /__w/oq-engine/oq-engine/openquake/engine/
+         runuser -l openquake -c 'cd /__w/oq-engine/oq-engine/openquake/server/; /opt/openquake/venv/bin/python3 manage.py migrate'
          # START WEBUI
-         runuser -l openquake -c '/opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
+         runuser -l openquake -c '/opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s'
          echo "Waiting WEBUI up on port 8800...."
          while ! nc -z localhost 8800; do
            sleep 5 # wait for 1/10 of the second before check again
          done
          echo "Test WebUI with curl before to test django"
-         sleep 1
-         # Perform migration after setup local_settings
-         cd /__w/oq-engine/oq-engine/openquake/engine/
-         runuser -l openquake -c 'cd /__w/oq-engine/oq-engine/openquake/server/; /opt/openquake/venv/bin/python3 manage.py migrate'
-         sleep 1
          runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --run https://downloads.openquake.org/jobs/eb_risk_demo.zip'
          curl --fail -L -I -X GET http://127.0.0.1:8800/accounts/login/
          curl --fail -I -L -X GET http://127.0.0.1:8800/engine/1/outputs
@@ -163,6 +155,6 @@ jobs:
          exit 1
          fi
          # Run a calcs using https
-         oq engine --run https://downloads.openquake.org/jobs/risk_test.zip
+         runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --run https://downloads.openquake.org/jobs/risk_test.zip'
          sleep 5
          $CURL_BIN -v --fail -G http://127.0.0.1:8800/engine/1/outputs
