--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -106,7 +106,7 @@ jobs:
          cd /__w/oq-engine/oq-engine/
          cd openquake/server
          cat > local_settings.py << EOF
-         OQ_APPLICATION_MODE = "RESTRICTED"
+         APPLICATION_MODE = "RESTRICTED"
          #
          WEBUI_ACCESS_LOG_DIR = '/var/log/oq-engine'
          EOF
