--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -107,7 +107,13 @@ jobs:
          cd openquake/server
          cat > local_settings.py << EOF
          APPLICATION_MODE = "RESTRICTED"
-         #
+         EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+         EMAIL_HOST=smtp.gmail.com
+         EMAIL_PORT=587
+         EMAIL_USE_TLS=True
+         EMAIL_HOST_USER=admin@reply.com
+         EMAIL_HOST_PASSWORD=polhjuih@
+         EMAIL_SUPPORT=noreply@reply.com
          WEBUI_ACCESS_LOG_DIR = '/var/log/oq-engine'
          EOF
          echo "DISPLAY content of local_settings"
