--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -125,8 +125,9 @@ jobs:
          # START WEBUI
          runuser -l openquake -c '/opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
          echo "Waiting WEBUI up on port 8800...."
-         while ! nc -z localhost 8800; do
-           sleep 5 # wait for 1/10 of the second before check again
+         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/accounts/login/)" != "200" ]]; do
+           echo "Still waiting WEBUI account login up on port 8800...."
+           sleep 5 # wait for 5 seconds before check again
          done
          echo "Test WebUI with curl before to test django"
          runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --run https://downloads.openquake.org/jobs/eb_risk_demo.zip'
@@ -140,9 +141,13 @@ jobs:
          $CURL_BIN $LOGIN_URL > /dev/null
          DJANGO_TOKEN="csrfmiddlewaretoken=$(grep csrftoken $COOKIES | sed 's/^.*csrftoken\s*//')"
          echo " perform login ..."
-         $CURL_BIN \
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
-             -X POST $LOGIN_URL > /dev/null
+             -X POST $LOGIN_URL) > /dev/null
+         if [ $status_code != "200" ]; then
+           echo "Unable to login"
+           exit 1
+         fi
          echo "--------------------"
          echo "display log of webui"
          echo "--------------------"
@@ -157,16 +162,32 @@ jobs:
          # Run a calc using https
          runuser -l openquake -c '/opt/openquake/venv/bin/oq engine --run https://downloads.openquake.org/jobs/risk_test.zip'
          sleep 5
-         $CURL_BIN \
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
-             -v --fail -G http://127.0.0.1:8800/engine/1/outputs
+             -v --fail -G http://127.0.0.1:8800/engine/1/outputs)
+         if [ $status_code != "200" ]; then
+           echo "Unable to visualize outputs"
+           exit 1
+         fi
          echo -n "Test Standalone Tools pages"
-         $CURL_BIN \
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
-             -v --fail -I -L -X GET http://127.0.0.1:8800/
-         $CURL_BIN \
+             -v --fail -I -L -X GET http://127.0.0.1:8800/)
+         if [ $status_code != "200" ]; then
+           echo "Unable to access the homepage"
+           exit 1
+         fi
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
-             -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy
-         $CURL_BIN \
+             -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy)
+         if [ $status_code != "200" ]; then
+           echo "Unable access the taxonomy standalone app"
+           exit 1
+         fi
+         status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
-             -v --fail -I -L -X GET http://127.0.0.1:8800/ipt
+             -v --fail -I -L -X GET http://127.0.0.1:8800/ipt)
+         if [ $status_code != "200" ]; then
+           echo "Unable to access the ipt standalone app"
+           exit 1
+         fi
