--- a/.github/workflows/webui_rh_test.yml
+++ b/.github/workflows/webui_rh_test.yml
@@ -144,7 +144,7 @@ jobs:
          status_code=$($CURL_BIN -w "%{http_code}"\
              -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -X POST $LOGIN_URL) > /dev/null
-         if [ $status_code != "200" ]; then
+         if [ $status_code != "302" ]; then
            echo "Unable to login"
            exit 1
          fi
@@ -169,23 +169,30 @@ jobs:
            echo "Unable to visualize outputs"
            exit 1
          fi
-         echo -n "Test Standalone Tools pages"
+
+         echo "Restart WebUI without authentication"
+         runuser -l openquake -c 'pkill oq-webui'
+         sleep 5
+         runuser -l openquake -c 'OQ_APPLICATION_MODE=PUBLIC /opt/openquake/venv/bin/oq webui start 127.0.0.1:8800 -s &'
+         echo "Waiting WEBUI up on port 8800...."
+         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://127.0.0.1:8800/)" != "200" ]]; do
+           echo "Still waiting WEBUI on port 8800...."
+           sleep 5 # wait for 5 seconds before check again
+         done
+         echo -n "Test Standalone Tools pages (without authentication)"
          status_code=$($CURL_BIN -w "%{http_code}"\
-             -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -v --fail -I -L -X GET http://127.0.0.1:8800/)
          if [ $status_code != "200" ]; then
            echo "Unable to access the homepage"
            exit 1
          fi
          status_code=$($CURL_BIN -w "%{http_code}"\
-             -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -v --fail -I -L -X GET http://127.0.0.1:8800/taxonomy)
          if [ $status_code != "200" ]; then
            echo "Unable access the taxonomy standalone app"
            exit 1
          fi
          status_code=$($CURL_BIN -w "%{http_code}"\
-             -d "$DJANGO_TOKEN&username=$YOUR_USER&password=$YOUR_PASS" \
              -v --fail -I -L -X GET http://127.0.0.1:8800/ipt)
          if [ $status_code != "200" ]; then
            echo "Unable to access the ipt standalone app"
